--- a/assignment-1/src/index.html
+++ b/assignment-1/src/index.html
@@ -12,8 +12,26 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
-
+	<div class="content">
+		<div class="section align-top">
+			<ul>
+				<li>List item 1</li>
+				<li>List item 2</li>
+				<li>List item 3</li>
+				<li class="sub">List item 3.1</li>
+				<li class="sub">List item 3.2</li>
+			</ul>
+		</div>
+		<div class="section">
+			<img src="https://www.pngitem.com/pimgs/m/118-1181708_google-icon-google-logo-design-flaws-hd-png.png">
+		</div>
+		<div class="section">
+			<img src="https://www.pngitem.com/pimgs/m/118-1181708_google-icon-google-logo-design-flaws-hd-png.png">
+		</div>
+		<div class="section align-center">
+			<h1>worlds best company</h1>
+		</div>
+	</div>
 	<!-- End your code -->
 
 	</div>
