--- a/assignment-1/src/index.html
+++ b/assignment-1/src/index.html
@@ -18,8 +18,10 @@
 				<li>List item 1</li>
 				<li>List item 2</li>
 				<li>List item 3</li>
-				<li class="sub">List item 3.1</li>
-				<li class="sub">List item 3.2</li>
+				<ul>
+					<li>List item 3.1</li>
+					<li>List item 3.2</li>
+				</ul>
 			</ul>
 		</div>
 		<div class="section">
@@ -29,7 +31,7 @@
 			<img src="https://www.pngitem.com/pimgs/m/118-1181708_google-icon-google-logo-design-flaws-hd-png.png">
 		</div>
 		<div class="section align-center">
-			<h1>worlds best company</h1>
+			<h1>This is a sample heading</h1>
 		</div>
 	</div>
 	<!-- End your code -->
